--- a/code/rust/.gitignore
+++ b/code/rust/.gitignore
@@ -30,7 +30,7 @@ Session.vim
 !/tests/run-make/thumb-none-qemu/example/.cargo
 
 ## Configuration
-/config.toml
+#/config.toml # Disabled by gandrout to enforce the given config
 /Makefile
 config.mk
 config.stamp
